objects/Sub_Order_Group__c/Sub_Order_Group__c.object-meta.xml
<CustomObject>
    <label>Sub-Order Group</label>
    <nameField>
        <label>Sub-Order Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub-Order Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>