objects/Sub_Order_Group__c/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>90 Day Guarantee</fullName>
            </value>
            <value>
                <fullName>Account Hierarchy Change</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>C&amp;C request</fullName>
            </value>
            <value>
                <fullName>Can’t Find Contract</fullName>
            </value>
            <value>
                <fullName>CCI Error</fullName>
            </value>
            <value>
                <fullName>Closed Business</fullName>
            </value>
            <value>
                <fullName>Contract Issues</fullName>
            </value>
            <value>
                <fullName>Conversion Clean-Up</fullName>
            </value>
            <value>
                <fullName>Customer Canceling Disconnect</fullName>
            </value>
            <value>
                <fullName>Customer Change Mind</fullName>
            </value>
            <value>
                <fullName>Customer Downsized</fullName>
            </value>
            <value>
                <fullName>Customer Paid</fullName>
            </value>
            <value>
                <fullName>Customer Paid Bill</fullName>
            </value>
            <value>
                <fullName>Customer Reinstating Service</fullName>
            </value>
            <value>
                <fullName>Data Entry Error</fullName>
            </value>
            <value>
                <fullName>Delayed Provisioning</fullName>
            </value>
            <value>
                <fullName>DSL Distance</fullName>
            </value>
            <value>
                <fullName>Incorrect Term Dates</fullName>
            </value>
            <value>
                <fullName>Insufficient Order Info</fullName>
            </value>
            <value>
                <fullName>LEC Facilities Not Available</fullName>
            </value>
            <value>
                <fullName>Less than 30 day left on Contract</fullName>
            </value>
            <value>
                <fullName>Non-ALE product/No ETF at this time</fullName>
            </value>
            <value>
                <fullName>Non-Pay</fullName>
            </value>
            <value>
                <fullName>No Services Remaining Under Contract</fullName>
            </value>
            <value>
                <fullName>Outside Service Area</fullName>
            </value>
            <value>
                <fullName>PBX Not Certified</fullName>
            </value>
            <value>
                <fullName>Product Correction</fullName>
            </value>
            <value>
                <fullName>Sales Discrepancy</fullName>
            </value>
            <value>
                <fullName>Service Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>