objects/Sub_Order_Group__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>